# cmake_lib_demo

./: CMakeLists.txt  README.md
A/: A-config.cmake  CMakeLists.txt  a.cpp  a.h
A/B/: B-config.cmake  CMakeLists.txt  b.cpp  b.h  my_cuda_kernel.cu
A/C/: C-config.cmake  CMakeLists.txt  c.cpp
A/D/: CMakeLists.txt
example1/: testA.cpp
example1/A/: CMakeLists.txt  a.h
example1/A/B/: CMakeLists.txt  b.cpp  b.h
example1/A/C/: CMakeLists.txt  c.h
example1/A/D/: d.cpp  d.h
example1/script/: cmake
example2/foo/: CMakeLists.txt  main.cpp
example2/foo/foo_lib/: CMakeLists.txt
example2/foo/foo_lib/cmake/: foo-config.cmake
example2/foo/foo_lib/foo_core/: CMakeLists.txt
example2/foo/foo_lib/foo_core/cmake/: foo_core-config.cmake
example2/foo/foo_lib/foo_core/include/foo_core/: foo_core.h
example2/foo/foo_lib/foo_core/src/: foo_core.cpp
example2/foo/foo_lib/include/foo/: foo.h
example2/foo/foo_lib/src/: foo.cpp
example2/foo_app/: CMakeLists.txt  main.cpp
script/: install  run
